finish the project

--- a/assets/style/abstracts/_variables.scss
+++ b/assets/style/abstracts/_variables.scss
@@ -13,6 +13,8 @@ $c-success: #56b881;
 $c-price: #50667f;
 $c-heart: #e55e5e;
 $c-fdark: #212121;
+$c-link: #3bb2d0;
+$c-link-hover: #3887be;
 
-// fonts-famliy => f-name-font
+// fonts-famliy => f-name-font 
 $f-vazir: Vazir;
