--- a/assets/style/base/_base.scss
+++ b/assets/style/base/_base.scss
@@ -9,31 +9,25 @@
 }
 
 .container {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  margin-right: auto !important;
+  margin-left: auto !important;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
 
   @include risponsive("xm") {
-    width: 100%;
+    width: 100% !important;
   }
 
   @include risponsive("sm") {
-    .container {
-      width: 750px;
-    }
+      width: 750px !important;
   }
 
   @include risponsive("md") {
-    .container {
-      width: 970px;
-    }
+      width: 970px !important;
   }
 
   @include risponsive("lg") {
-    .container {
-      width: 1170px;
-    }
+      width: 1170px !important;
   }
 } 
 
@@ -72,4 +66,21 @@
       color: $c-white !important;
     }
   }
+}
+
+.scroll-top{
+  position: fixed;
+  left: 40px;
+  bottom: 60px;
+  background: #fff;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px 1px #d3d2d3;
+  width: 40px;
+  height: 40px;
+  color: #28353d;
+  font-size: 28px;
+  line-height: 45px;
+  text-align: center;
+  cursor: pointer;
+  display: none;
 }
