--- a/assets/style/base/_helpers.scss
+++ b/assets/style/base/_helpers.scss
@@ -57,8 +57,7 @@
     border-radius: 2px;
     width: 100%;
     overflow: hidden;
-    -webkit-box-shadow: 0 1px 2px 1px #d3d2d3;
-    -moz-box-shadow: 0 1px 2px 1px #d3d2d3;
+    border: none;   
     box-shadow: 0 1px 2px 1px #d3d2d3;
     padding: 10px;
 }
