--- a/assets/style/components/_button.scss
+++ b/assets/style/components/_button.scss
@@ -1,3 +1,58 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the button component.
 // -----------------------------------------------------------------------------
+
+main>div .btn-go-buy-box {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 15;
+    text-align: center;
+    color: #fff;
+    border-radius: 2px;
+    font-weight: 700;
+    font-size: 16px;
+    text-decoration: none;
+    width: 100%;
+    padding: 5px 0;
+    background-color: #56b881;
+    transition: 0.3s;
+    height: 45px;
+    justify-content: center;
+    align-items: center;
+
+    &:hover {
+        background-color: #51ac79;
+        color: #fff;
+    }
+
+    &:before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        display: block;
+        width: 0;
+        padding-top: 0;
+        border-radius: 100%;
+        background-color: rgba(255, 255, 255, 0.1);
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+
+    &:active {
+        &:before {
+            width: 120%;
+            padding-top: 120%;
+            transition: width 0.2s ease-out, padding-top 0.2s ease-out;
+        }
+    }
+
+    @include risponsive("xm"){
+        display: flex;
+    }
+    
+    @include risponsive("lg"){
+        display: none;
+    }
+}
