--- a/assets/style/pages/_home.scss
+++ b/assets/style/pages/_home.scss
@@ -33,12 +33,7 @@
   }
 }
 
-#section-body {
-  .container {
-    @extend %d-flex;
-    @extend %justify-content-between;
-    @extend %flex-wrap;
-
+.collapse{
     @include risponsive("xm") {
       padding-top: 90px !important;
     }
@@ -46,6 +41,21 @@
     @include risponsive("sm") {
       padding-top: 30px !important;
     }
+}
+
+#section-body {
+  .container {
+    @extend %d-flex;
+    @extend %justify-content-between;
+    @extend %flex-wrap;
+
+    // @include risponsive("xm") {
+    //   padding-top: 90px !important;
+    // }
+
+    // @include risponsive("sm") {
+    //   padding-top: 30px !important;
+    // }
 
     padding-bottom: 35px;
 
@@ -143,7 +153,6 @@
         .card-fixed{
           position: fixed;
           top: 25px;
-          left: 50px;
           z-index: 5;
           width: 342px;
           height: 528px;
@@ -153,6 +162,7 @@
           position: absolute;
           top: 2181px;
           z-index: 5;
+          left: 0 !important;
         }
       }
       
